--- a/mandatory/Makefile
+++ b/mandatory/Makefile
@@ -3,10 +3,10 @@
 #                                                         :::      ::::::::    #
 #    Makefile                                           :+:      :+:    :+:    #
 #                                                     +:+ +:+         +:+      #
-#    By: luhumber <luhumber@student.42.fr>          +#+  +:+       +#+         #
+#    By: lucas <lucas@student.42.fr>                +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2023/01/11 14:23:06 by luhumber          #+#    #+#              #
-#    Updated: 2023/03/14 13:14:32 by luhumber         ###   ########.fr        #
+#    Updated: 2023/03/14 16:42:45 by lucas            ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
